marketing/products/mbs-studio/deploy/k8s/overlays/prod/patch-service-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbs-studio-web
  namespace: mbs-studio-prod
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mbs-studio-web
  namespace: mbs-studio-prod
subsets:
  - addresses:
      - ip: 10.88.130.150
    ports:
      - port: 80
        protocol: TCP
