marketing/products/mbs-studio/deploy/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbs-studio-ingress
spec:
  rules:
    - host: mbs.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mbs-studio-web
                port:
                  number: 80
